--- a/app.yaml
+++ b/app.yaml
@@ -13,6 +13,7 @@
 #
 # [START runtime]
 runtime: nodejs
+env: flex
 # [END runtime]
 
 # Temporary setting to keep gcloud from uploading node_modules
