--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "dashboard-site",
   "version": "1.0.0",
   "description": "Data analytics site to keep track of potential sexual harassment online",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
