--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Data analytics site to keep track of potential sexual harassment online",
   "main": "app.js",
+  "engines": {
+	"node": ">=4.3.2"
+  },
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
